--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <section>
-      <h1>Demo</h1>
-    </section>
+    <div id="root"
+    
+    ></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
